2006-10-12  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (funit-child-alias): Do not build, just cp funit-alias.
	(arch32/funit-child-alias): Likewise.

2006-10-11  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (frysk_pkglibexecdir_arch32_funit_child_alias_SOURCES):
	New variable, to fix `make dist'.

2006-10-11  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: Pass -Werror to automake.

2006-10-06  Tom Tromey  <tromey@redhat.com>

	* frysk/util/Ftrace.java: Added.
	* frysk/util/StracePrinter.java: Added.
	* frysk/util/SyscallHandler.java: Added.
	* frysk/util/Util: Added.
	* frysk/bindir/ftrace.java: Refactored to use frysk/util/Ftrace.java. Added command line options.

2006-10-06  Nurdin Premji <npremji@redhat.com>

	* frysk/util/FStack.java: Added.
	* frysk/bindir/fstack.java: Moved most methods (except main and command line parsing) to frysk/util/FStack.java.	

2006-10-04  Nurdin Premji <npremji@redhat.com>

	* frysk/bindir/fstack.java: 
	Ran gnu styler.
	Used procAttachedObserver rather than procTasksObserver
	(addOptions): Added information about ALL logging option.
	(removeObservers): Changed to use the process not the task.
	(requestDeletes): Added, removes the attachedObserver from all of the tasks.
	(storeTasks): Used integer tid as key rather than string tid as key so sorted in ascending trace number order. Fixes issue with traces printing out weird orders like 21 22 3021 42.

2006-10-03  Nurdin Premji <npremji@redhat.com>
	
	* frysk/bindir/fstack.java(addFailed): Implemented, fixes evolution hanging issue.

2006-10-02  Nurdin Premji <npremji@redhat.com>

	* frysk/bindir/fstack.java: Added command line parser + logging options.
	Changed to print tasks in ascending order of TID.
	(handleTask) changed to (storeTask)

2006-09-28  Mike Cvet  <mcvet@redhat.com>

	* frysk/bindir/fstack.java (handleTask): Don't print sourcefiles if they are null.

2006-09-27  Nurdin Premji <npremji@redhat.com>
